fad/test/neg/type-mismatch.fad
// Should fail: assigning bool where int is expected
unpack fadeno. Int Bool

/: Int
x = true

in x
